# solitaire

./: AnimationWrapper.cpp  CMakeLists.txt  Card.cpp  ControllerSolitaire.cpp  Deck.cpp  MainSolitaire.cpp  ModelSolitaire.cpp  README.md  ViewSolitaire.cpp  aceOfClubs.xcf  test_solitaire.cpp
include/: AnimationWrapper.hpp  Card.hpp  ControllerSolitaire.hpp  ModelSolitaire.hpp  ViewSolitaire.hpp
